--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Hello Triangle!</title>
-        <script src="main.js" type="module"></script>
+        <title>Test 2</title>
+
+        <!-- Step 8 add the image here  -->
+        <img style="display:none" id="myJpegId" src="picture.jpeg"></img>
+
+        <script src="Q2.js" type="module"></script>
         <style>
 html, head, body {
     margin: 0;
