--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <title>Test 2</title>
 
         <!-- Step 8 add the image here  -->
-        <img style="display:none" id="myJpegId" src="picture.jpeg"></img>
+        <img style="display: none;" id="pictureID" src="picture.jpeg" alt="..."></img>
 
-        <script src="Q2.js" type="module"></script>
+        <script src="Q2v1.js" type="module"></script>
         <style>
 html, head, body {
     margin: 0;
