--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
         <title>Test 2</title>
 
-        <!-- Step 8 add the image here  -->
+        <!-- Q2 Step7 add the image here  -->
         <img style="display: none;" id="pictureID" src="picture.jpeg" alt="..."></img>
 
-        <script src="Q2.js" type="module"></script>
+        <script src="Q3.js" type="module"></script>
         <style>
 html, head, body {
     margin: 0;
@@ -58,6 +58,10 @@ html, head, body {
             Doing a little error output in the HTML is nice when testing on mobile,
             where you don't have access to console.log.
         -->
+        <button id="rotateX">Rotate X</button>
+        <button id="rotateY">Rotate Y</button>
+        <button id="rotateZ">Rotate Z</button>
+
         <div id="error-box">
             <span class="error-box-title">Error messages, if any, go in here.</span>
         </div>
