--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Q2 Step7 add the image here  -->
         <img style="display: none;" id="pictureID" src="picture.jpeg" alt="..."></img>
 
-        <script src="Q3.js" type="module"></script>
+        <script src="Q3Perspective.js" type="module"></script>
         <style>
 html, head, body {
     margin: 0;
